--- a/src/componentes/CampoTexto/campotexto.css
+++ b/src/componentes/CampoTexto/campotexto.css
@@ -11,9 +11,10 @@
 .campo-texto input {
     background: #fff;
     width: 100%;
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.4);
+    box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.3);
     border: none;
     font-size: 24px;
     padding: 24px;
     box-sizing: border-box;
+    outline: none;
 }
