--- a/src/componentes/CampoTexto/campotexto.css
+++ b/src/componentes/CampoTexto/campotexto.css
@@ -11,10 +11,11 @@
 .campo-texto input {
     background: #fff;
     width: 100%;
-    box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.3);
+    box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.06);
     border: none;
     font-size: 24px;
     padding: 24px;
     box-sizing: border-box;
     outline: none;
+    border-radius: 10px;
 }
