--- a/src/componentes/Formulario/formulario.css
+++ b/src/componentes/Formulario/formulario.css
@@ -3,3 +3,11 @@
     justify-content: center;
     margin: 80px 0;
 }
+
+.formulario form{
+    max-width: 80%;
+    background: rgb(196, 196, 196);
+    border-radius: 20px;
+    padding: 36px 64px;
+    box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.08);
+}
