--- a/src/componentes/CampoTexto/campotexto.css
+++ b/src/componentes/CampoTexto/campotexto.css
@@ -9,7 +9,7 @@
 }
 
 .campo-texto input {
-    background: #fff;
+    background-color: #fff;
     width: 100%;
     box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.06);
     border: none;
