--- a/src/componentes/Time/time.css
+++ b/src/componentes/Time/time.css
@@ -9,3 +9,14 @@
     display: inline-block;
     padding-bottom: 8px;
 }
+
+.time .colaboradores {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 32px;
+    flex-wrap: wrap;
+}
+
+.time .colaboradores .cabecalho{
+    margin-top: 32px;
+}
